      more than one output operand.

*** Statistics

  --concentration: measure the "concentration" of values in a distribution
    around the median. See the book for the full description of this
    option.

*** astscript-fits-view
  --globalhdu: use the same HDU in any number of input files (with the
    short format of '-g'); similar to the same option in Arithmetic or
    ConvertType.

  - The default DS9 'sls' colormap contrast and bias are adjusted so the
    largest value does not have a white color, but is dark red. This was
    done because white is DS9's default color for blank pixels and
    out-of-image regions; making the pixels with the largest value
    invisible.

*** astscript-radial-profile
  --polar: generate a 2D polar plot in the same region of the image that
    the 1D radial profile has been calculate over. The polar plot is a
    mapping/projection of pixels into an azimuthal angle vs. radius grid,
    highlighting features that have polar symmetry (for example spiral arms
    in galaxies or diffractinon spikes in the PSF). This feature was
    implemented by Sepideh Eskdandarlou.

*** astscript-psf-scale-factor
  --nocentering: disable sub-pixel centering of the desired star before
    finding the scale factor; added by Sepideh Eskandarlou and Raul
    Infante-Sainz.

*** Makefile extensions
  - $(ast-text-prev TARGET, LIST): select the word that is previous to
    'TARGET' in a list of words. See the minimal working example in the
    book for more.

  - $(ast-text-prev-batch TARGET, NUM, LIST): select the previous "batch"
    of 'NUM' words (in relation to the batch that contains 'TARGET'). This
    is useful for steps in your pipelines were you need to limit the
    parallelization to batches. See the minimal working example in the book
    for more.

  - $(ast-text-prev-batch-by-ram TARGET, NEEDED_RAM_GB, LIST): select the
    previous batch of words in 'LIST' such that the total consumed RAM by